--- a/food-crossroads/src/css/restaurant_self_pick_up.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up.css
@@ -125,7 +125,7 @@
     margin-left: 15px;
 }
 
-#restaurant_self_pick_up tbody .detail_btn,.cancel_btn {
+#restaurant_self_pick_up tbody .detail_btn,#restaurant_self_pick_up tbody .cancel_btn {
     border-radius: 5px;
     border: none;
     padding: 5px 8px;
