--- a/food-crossroads/src/css/restaurant_self_pick_up_history.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up_history.css
@@ -129,7 +129,7 @@
   width: 100px;  
 }
 
-#restaurant_history_list tbody .detail_btn,.cancel_btn {
+#restaurant_history_list tbody .detail_btn,#restaurant_history_list tbody .cancel_btn {
     border-radius: 5px;
     border: none;
     padding: 5px 8px;
