--- a/food-crossroads/src/css/restaurant_self_pick_up_history.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up_history.css
@@ -1,4 +1,4 @@
-#restaurant_history_list_aside {
+#restaurant_self_pick_up_history_aside {
     background-color: #403C3C;
     width: 230px;
     height: 90vh;
@@ -6,21 +6,21 @@
     top: 10%;
 }
 
-#restaurant_history_list_aside .panel-default{
+#restaurant_self_pick_up_history_aside .panel-default{
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
 }
 
-#restaurant_history_list_aside .default{
+#restaurant_self_pick_up_history_aside .default{
     background-color: #8B1309;
 }
 
-#restaurant_history_list_aside .panel-title {
+#restaurant_self_pick_up_history_aside .panel-title {
     padding-top: 8px;
 }
 
-#restaurant_history_list_aside .panel-heading .panel-title a {
+#restaurant_self_pick_up_history_aside .panel-heading .panel-title a {
     font-weight: 600;
     color: white;
     text-decoration: none;
@@ -28,64 +28,60 @@
     width: 100%;
 }
 
-#restaurant_history_list_aside .little_title {
+#restaurant_self_pick_up_history_aside .little_title {
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
 }
 
-#restaurant_history_list_aside .little_title:hover {
+#restaurant_self_pick_up_history_aside .little_title:hover {
     background-color: #8B1309;
 }
 
-#restaurant_history_list_aside .panel .little_title a  {
+#restaurant_self_pick_up_history_aside .panel .little_title a  {
     text-decoration: none;
     color: white;
     font-weight: 600;
 }
 
-/* .container{
-    height: 83vh;    
-} */
-
-#restaurant_history_list .search_bar {
+#restaurant_self_pick_up_history .search_bar {
     display: flex;
     justify-content: center;
     width: 100%;
 }
 
-#restaurant_history_list .search_bar h3{
+#restaurant_self_pick_up_history .search_bar h3{
     font-weight: 600;
     margin-right: 500px;
 }
 
-#restaurant_history_list .search_bar input[type=text]{
+#restaurant_self_pick_up_history .search_bar input[type=text]{
     border: none;  
     width: 90%;
 }
 
-#restaurant_history_list .search_bar input[type=text]:focus{
+#restaurant_self_pick_up_history .search_bar input[type=text]:focus{
     outline: none;
 }
 
-#restaurant_history_list .search_bar button {
+#restaurant_self_pick_up_history .search_bar button {
     height: 40px;
     background-color: #FCC106;
     border-radius: 5px;
     padding: 2px 10px;
 }
 
-#restaurant_history_list .search_bar button:hover {
+#restaurant_self_pick_up_history .search_bar button:hover {
     background-color: #f0b802;
 }
 
-#restaurant_history_list .search_bar {
+#restaurant_self_pick_up_history .search_bar {
     position: relative;
     top: 10px;
     left: 20px;
 }
 
-#restaurant_history_list th{
+#restaurant_self_pick_up_history th{
     font-size: 16px;
     text-align: center;
     position: relative;
@@ -94,7 +90,7 @@
     width: 110px;   
 }
 
-#restaurant_history_list .search_bar_div{
+#restaurant_self_pick_up_history .search_bar_div{
     border: 1px solid #999999;
     border-radius: 5px;
     padding: 5px;
@@ -102,41 +98,41 @@
     margin-right: 10px;
 }
 
-#restaurant_history_list .container .order_table {
+#restaurant_self_pick_up_history .container .order_table {
     position: absolute;
     top: 140px;
     left: 16%;
     width: 80%;
 }
 
-#restaurant_history_list label{
+#restaurant_self_pick_up_history label{
     margin-right: 20px;
 }
 
-#restaurant_history_list thead {
+#restaurant_self_pick_up_history thead {
     position: relative;
     right: 20px;
 }
 
-#restaurant_history_list th{
+#restaurant_self_pick_up_history th{
     text-align: center;
     position: relative;
     left: 20px;
     letter-spacing: 5px;
 }
 
-#restaurant_history_list .table td{
+#restaurant_self_pick_up_history .table td{
   width: 100px;  
 }
 
-#restaurant_history_list tbody .detail_btn,#restaurant_history_list tbody .cancel_btn {
+#restaurant_self_pick_up_history tbody .detail_btn,#restaurant_self_pick_up_history tbody .cancel_btn {
     border-radius: 5px;
     border: none;
     padding: 5px 8px;
     transition: 0.3s;
 }
 
-#restaurant_history_list .modal-footer .detail_btn,#restaurant_history_list .modal-footer .cancel_btn {
+#restaurant_self_pick_up_history .modal-footer .detail_btn,#restaurant_self_pick_up_history .modal-footer .cancel_btn {
     border-radius: 5px;
     border: none;
     font-size: 18px;
@@ -144,59 +140,59 @@
     transition: 0.3s;
 }
 
-#restaurant_history_list tbody .detail_btn,#restaurant_history_list .modal-footer .detail_btn{
+#restaurant_self_pick_up_history tbody .detail_btn,#restaurant_self_pick_up_history .modal-footer .detail_btn{
     border: 2px solid #403C3C;
 }
 
-#restaurant_history_list .detail_btn:hover {
+#restaurant_self_pick_up_history .detail_btn:hover {
     background-color: #524d4d;
     color: #fff;
 }
 
-#restaurant_history_list .modal-footer .detail_btn:hover{
+#restaurant_self_pick_up_history .modal-footer .detail_btn:hover{
     background-color: #524d4d
 }
 
-#restaurant_history_list .cancel_btn,#restaurant_history_list .modal-footer .cancel_btn{
+#restaurant_self_pick_up_history .cancel_btn,#restaurant_self_pick_up_history .modal-footer .cancel_btn{
     background-color: #8b1309;
     color: #fff;
 }
 
-#restaurant_history_list .cancel_btn:hover{
+#restaurant_self_pick_up_history .cancel_btn:hover{
     background-color: #a30f01;
 }
 
-#restaurant_history_list .modal-footer .cancel_btn:hover{
+#restaurant_self_pick_up_history .modal-footer .cancel_btn:hover{
     background-color: #a30f01;
 }
 
 
-#restaurant_history_list .cancel_modal_body{
+#restaurant_self_pick_up_history .cancel_modal_body{
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
     font-size: 28px;
 }
 
-#restaurant_history_list .modal-title{
+#restaurant_self_pick_up_history .modal-title{
     font-size: 24px;
 }
 
-#restaurant_history_list .detail_modal_body{
+#restaurant_self_pick_up_history .detail_modal_body{
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: 150px;
     font-size: 18px;
 }
 
-#restaurant_history_list .rank_modal_body{
+#restaurant_self_pick_up_history .rank_modal_body{
     position: relative;
     margin-top: 100px;
     margin-bottom: 100px;
     margin-left: 150px;
 }
 
-#restaurant_history_list .rank_modal_title{
+#restaurant_self_pick_up_history .rank_modal_title{
     position: absolute;
     font-size: 28px;
     left: -50px;
@@ -204,11 +200,11 @@
 
 }
 
-#restaurant_history_list .modal-title {
+#restaurant_self_pick_up_history .modal-title {
     font-weight: bold;
 }
 
-#restaurant_history_list .detail_modal_body {
+#restaurant_self_pick_up_history .detail_modal_body {
    font-size: 20px;
    letter-spacing: 2px;
    position: relative;
@@ -220,7 +216,7 @@
 
 /* 超大型螢幕 */
 @media screen and (max-width:1200px) {
-    #restaurant_history_list_aside {
+    #restaurant_self_pick_up_history_aside {
         background-color: #403C3C;
         width: 150px;
         height: 88vh;
@@ -228,27 +224,23 @@
         top: 10%;
     }
 
-    #restaurant_history_list_aside .panel-title {
+    #restaurant_self_pick_up_history_aside .panel-title {
         font-size: 20px;
         padding-top: 8px;
     }
 
-    #restaurant_history_list_aside .panel .little_title a  {
+    #restaurant_self_pick_up_history_aside .panel .little_title a  {
         text-decoration: none;
         color: white;
         font-size: 13px;
         font-weight: 600;
     }
 
-    /* .container{
-        height: 80vh;    
-    } */
-
-    #restaurant_history_list .container .order_table {
+    #restaurant_self_pick_up_history .container .order_table {
        margin-top: -15px;
     }
 
-    #restaurant_history_list th{
+    #restaurant_self_pick_up_history th{
         font-size: 10px;
         text-align: center;
         position: relative;
@@ -256,36 +248,36 @@
         letter-spacing: 0px;
     }
     
-    #restaurant_history_list td{
+    #restaurant_self_pick_up_history td{
         font-size: 10px;
         text-align: center;
     }
     
-    #restaurant_history_list .cancel_modal_body{
+    #restaurant_self_pick_up_history .cancel_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         text-align: center;
         font-size: 28px;
     }
     
-    #restaurant_history_list .modal-title{
+    #restaurant_self_pick_up_history .modal-title{
         font-size: 24px; 
     }
-    #restaurant_history_list .detail_modal_body{
+    #restaurant_self_pick_up_history .detail_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         margin-left: 150px;
         font-size: 18px;
     }
     
-    #restaurant_history_list .rank_modal_body{
+    #restaurant_self_pick_up_history .rank_modal_body{
         position: relative;
         margin-top: 100px;
         margin-bottom: 100px;
         margin-left: 150px;
     }
     
-    #restaurant_history_list .rank_modal_title{
+    #restaurant_self_pick_up_history .rank_modal_title{
         position: absolute;
         font-size: 28px;
         left: -50px;
