--- a/food-crossroads/src/css/restaurant_self_pick_up.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up.css
@@ -171,8 +171,13 @@ aside {
 }
 
 #restaurant_self_pick_up .detail_btn{
-    border: 1px solid gray;
+    padding: 5px;
     border-radius: 8px;
+}
+
+#restaurant_self_pick_up .detail_btn:hover{
+    background-color: #524d4d;    
+    color: #fff;
 }
 
 #restaurant_self_pick_up .comment_btn{
@@ -237,4 +242,84 @@ aside {
     white-space: nowrap;
     overflow: hidden;
     color: orange; /*前景星星顏色*/
+}
+
+.detail {
+    display: none;
+    width: 330px;
+    height: 400px;
+    position: absolute ;
+    border: 2px solid black;
+
+}
+
+.detail h3 {
+    font-weight: bold;
+    border-bottom: 2px solid black;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+.detail span {
+    position: absolute;
+    left: 10px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.detail .back_btn {
+    position: absolute;
+    font-size: 20px;
+    top: 340px;
+    left: 260px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgb(224, 219, 219);
+}
+
+.detail .back_btn:hover {
+    background-color: #524d4d;    
+    color: #fff;
+}
+
+.detail2 {
+    display: none;
+    width: 370px;
+    height: 400px;
+    position: absolute ;
+    border: 2px solid black;
+
+}
+
+.detail2 h3 {
+    font-weight: bold;
+    border-bottom: 2px solid black;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding-left: 10px;
+    padding-bottom: 10px;
+}
+
+.detail2 span {
+    position: absolute;
+    left: 10px;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.detail2 .back_btn {
+    position: absolute;
+    font-size: 20px;
+    top: 340px;
+    left: 295px;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: rgb(224, 219, 219);
+}
+
+.detail2 .back_btn:hover {
+    background-color: #524d4d;    
+    color: #fff;
 }
