--- a/food-crossroads/src/css/member_editmember.css
+++ b/food-crossroads/src/css/member_editmember.css
@@ -4,35 +4,39 @@
   z-index: -1;
 }
 
-.aside_menu {
+#member_aside {
   background-color: #403c3c;
   width: 230px;
-  height: 100%;
+  height: 90%;
   position: fixed;
+  top: 9%;
   float: left;
-  z-index: 4;
+  z-index: 2;
 }
 
-.mobile_aside_menu {
+#member_aside .mobile_aside_menu {
   display: none;
 }
 
-.default {
+#member_aside .default {
   background-color: #8b1309;
 }
 
-.panel-default {
-  /* border: 1px solid red; */
+#member_aside .panel-default {
   border-bottom: 1px solid white;
   padding: 5px;
   width: 100%;
 }
 
-.panel-title {
+#member_aside .panel-title {
   padding-top: 8px;
 }
 
-.panel .panel-heading a {
+#member_aside .panel-title:hover {
+  background-color: #8b1309;
+}
+
+#member_aside .panel .panel-heading a {
   font-weight: 600;
   color: white;
   text-decoration: none;
@@ -40,7 +44,7 @@
   width: 100%;
 }
 
-.panel-default:hover {
+#member_aside .panel-default:hover {
   background-color: #8b1309;
 }
 
@@ -112,9 +116,9 @@ th {
 }
 .edit_info {
   /* position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, 50%); */
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 50%); */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -178,7 +182,7 @@ th {
 }
 
 .member_editinfo_btn:hover {
-  background-color: #f04535;
+  background-color: #a30f01;
 }
 
 #edit_member .member_editinfo_btn {
@@ -196,11 +200,11 @@ th {
 }
 
 #edit_member .member_editinfo_btn:hover {
-  background-color: #f04535;
+  background-color: #a30f01;
 }
 
 .member_editpwd_btn:hover {
-  background-color: #f04535;
+  background-color: #a30f01;
 }
 
 #edit_member .member_confirm_btn {
@@ -217,7 +221,7 @@ th {
 }
 
 #edit_member .member_confirm_btn:hover {
-  background-color: red;
+  background-color: #a30f01;
 }
 #edit_member .member_back_btn {
   margin-left: 30px;
@@ -243,13 +247,11 @@ th {
 /* booking_manage start */
 
 #booking_manage {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 90%;
+  position: fixed;
+  top: 10%;
+  left: 16%;
+  width: 80%;
   height: 100%;
-  margin-left: 12%;
-  /* border: 1px solid black; */
 }
 
 #mobile_booking_manage,
@@ -259,14 +261,13 @@ th {
 
 #booking_manage .table th {
   border-bottom: 1px solid #403c3c;
-}
-
-#booking_manage .table th {
   width: 10%;
 }
 
 #booking_manage td {
+  vertical-align: middle;
   text-align: center;
+  border-top: 1px solid #403c3c;
 }
 
 #booking_manage .detail_modal_body {
@@ -284,12 +285,12 @@ th {
   font-weight: 600;
 }
 
-.cancel_btn,
-.detail_btn,
-.comment_btn,
-.order_comment_btn,
-.order_comment_btn1 {
-  border-radius: 8px;
+#booking_manage .cancel_btn,
+#booking_manage .detail_btn,
+#booking_manage .comment_btn,
+#booking_manage .order_comment_btn,
+#booking_manage .together_btn {
+  border-radius: 5px;
   border: none;
   padding: 5px 8px;
   transition: 0.3s;
@@ -300,49 +301,43 @@ th {
   right: 0px;
 }
 
-.btn_td {
-  width: 20%;
+#booking_manage .btn_td {
+  width: 10%;
 }
 
-.cancel_btn {
-  background-color: #dadada;
-  margin-right: 5%;
+#booking_manage .cancel_btn {
+  background-color: #cacaca;
+  margin-right: 2%;
 }
 
-.cancel_btn:hover {
-  background-color: #dfdede;
+#booking_manage .cancel_btn:hover {
+  background-color: #b8b8b8;
 }
 
-.detail_btn {
+#booking_manage .detail_btn {
   background-color: #403c3c;
   color: #fff;
 }
 
-.detail_btn:hover {
+#booking_manage .detail_btn:hover {
   background-color: #524d4d;
 }
 
-.comment_btn {
-  margin-left: -360px;
+#booking_manage .comment_btn {
   background-color: #8b1309;
   color: #fff;
 }
 
-.comment_btn:hover {
+#booking_manage .comment_btn:hover {
   background-color: #a30f01;
 }
 
-.together_btn {
-  border: 1px solid red;
-  margin-left: 17px;
-  background-color: #fff;
-  color: #8b1309;
-  border-radius: 8px;
-  padding: 5px 8px;
-  transition: 0.3s;
-}
 .order_comment_btn1 {
   margin-left: -320px;
+}
+#booking_manage .together_btn {
+  /* margin-left: -270px; */
+
   background-color: #8b1309;
   color: #fff;
 }
@@ -352,8 +347,8 @@ th {
 }
 
 /* .mobile_td{
-        display: none;
-    } */
+      display: none;
+  } */
 
 /* order_manage start */
 
@@ -480,16 +475,16 @@ th {
 /* 超大型螢幕 */
 
 @media screen and (max-width: 1200px) {
-  .aside_menu {
+  #member_aside {
     display: none;
   }
-  #aside_menu_chk:checked + .mobile_aside_menu {
+  #aside_menu_chk:checked + #mobile_member_aside {
     transform: translateX(0);
   }
-  #aside_menu_chk:checked + .mobile_aside_menu .fa-angle-right {
+  #aside_menu_chk:checked + #mobile_member_aside .fa-angle-right {
     transform: scaleX(-1);
   }
-  .mobile_aside_menu {
+  #mobile_member_aside {
     display: unset;
     background-color: #403c3c;
     width: 230px;
@@ -502,7 +497,7 @@ th {
     z-index: 2;
     transition: 0.6s;
   }
-  .mobile_aside_menu label {
+  #mobile_member_aside label {
     position: absolute;
     background-color: #ccc;
     border-radius: 0 5px 5px 0;
@@ -510,6 +505,35 @@ th {
     top: 50%;
     left: 100%;
     transition: 0.6s;
+  }
+  #mobile_member_aside .default {
+    background-color: #8b1309;
+  }
+  #mobile_member_aside .panel-default:hover {
+    background-color: #8b1309;
+  }
+  #mobile_member_aside .panel-default {
+    border-bottom: 1px solid white;
+    padding: 5px;
+    width: 100%;
+  }
+  #mobile_member_aside .panel-title {
+    padding-top: 8px;
+  }
+  #mobile_member_aside .panel .panel-heading a {
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    transition: 0.3s;
+    width: 100%;
+  }
+  #booking_manage{
+    left: 0;
+    width: 75%;
+  }
+  #booking_manage .table th {
+    border-bottom: 1px solid #403c3c;
+    width: 8%;
   }
   #booking_manage,
   #order_manage {
@@ -521,23 +545,23 @@ th {
 /* 大型螢幕 */
 
 @media screen and (max-width: 992px) {
-  .mobile_td {
+  #booking_manage .mobile_td {
     height: 90px;
     line-height: 60px;
   }
-  .cancel_btn {
-    margin-right: 16%;
+  #booking_manage .cancel_btn {
+    margin-right: 19%;
   }
-  .detail_btn {
-    margin-right: 15%;
+  #booking_manage .detail_btn {
+    margin-right: 18%;
   }
-  .comment_btn {
+  #booking_manage .comment_btn {
     margin-top: 15px;
   }
-  .order_td {
+  #booking_manage .order_td {
     width: 15%;
   }
-  .order_td .detail_btn {
+  #booking_manage .order_td .detail_btn {
     margin-top: 15px;
   }
 }
