--- a/food-crossroads/src/css/restaurant_self_pick_up.css
+++ b/food-crossroads/src/css/restaurant_self_pick_up.css
@@ -1,4 +1,4 @@
-#restaurant_self_pick_up {
+#restaurant_self_pick_up_aside {
     background-color: #403C3C;
     width: 230px;
     height: 90vh;
@@ -6,22 +6,22 @@
     top: 10%;
 }
 
-#restaurant_self_pick_up .default {
+#restaurant_self_pick_up_aside .default {
     width: 230px;
     background-color: #8B1309;
 }
 
-#restaurant_self_pick_up .panel-default{
+#restaurant_self_pick_up_aside .panel-default{
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
 }
 
-#restaurant_self_pick_up .panel-title {
+#restaurant_self_pick_up_aside .panel-title {
     padding-top: 8px;
 }
 
-#restaurant_self_pick_up .panel-heading .panel-title a {
+#restaurant_self_pick_up_aside .panel-heading .panel-title a {
     font-weight: 600;
     color: white;
     text-decoration: none;
@@ -29,13 +29,13 @@
     width: 100%;
 }
 
-#restaurant_self_pick_up .little_title {
+#restaurant_self_pick_up_aside .little_title {
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
 }
 
-#restaurant_self_pick_up .panel .little_title a {
+#restaurant_self_pick_up_aside .panel .little_title a {
     text-decoration: none;
     color: white;
     font-weight: 600;
@@ -134,13 +134,8 @@
 }
 
 #restaurant_self_pick_up .detail_btn{
-    padding: 5px;
+    border: 1px solid gray;
     border-radius: 8px;
-}
-
-#restaurant_self_pick_up .detail_btn:hover{
-    background-color: #524d4d;    
-    color: #fff;
 }
 
 #restaurant_self_pick_up .comment_btn{
@@ -172,84 +167,4 @@
     white-space: nowrap;
     overflow: hidden;
     color: orange; /*前景星星顏色*/
-}
-
-.detail {
-    display: none;
-    width: 330px;
-    height: 400px;
-    position: absolute ;
-    border: 2px solid black;
-
-}
-
-.detail h3 {
-    font-weight: bold;
-    border-bottom: 2px solid black;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-}
-
-.detail span {
-    position: absolute;
-    left: 10px;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.detail .back_btn {
-    position: absolute;
-    font-size: 20px;
-    top: 340px;
-    left: 260px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: rgb(224, 219, 219);
-}
-
-.detail .back_btn:hover {
-    background-color: #524d4d;    
-    color: #fff;
-}
-
-.detail2 {
-    display: none;
-    width: 370px;
-    height: 400px;
-    position: absolute ;
-    border: 2px solid black;
-
-}
-
-.detail2 h3 {
-    font-weight: bold;
-    border-bottom: 2px solid black;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding-left: 10px;
-    padding-bottom: 10px;
-}
-
-.detail2 span {
-    position: absolute;
-    left: 10px;
-    font-weight: bold;
-    font-size: 20px;
-}
-
-.detail2 .back_btn {
-    position: absolute;
-    font-size: 20px;
-    top: 340px;
-    left: 295px;
-    padding: 10px;
-    border-radius: 5px;
-    background-color: rgb(224, 219, 219);
-}
-
-.detail2 .back_btn:hover {
-    background-color: #524d4d;    
-    color: #fff;
 }
