--- a/food-crossroads/src/css/restaurant_booking_today.css
+++ b/food-crossroads/src/css/restaurant_booking_today.css
@@ -194,7 +194,7 @@
 
 #detail .modal-content {
     width: 100%;
-    margin-top: -120px;
+    margin-top: -60px;
 }
 
 #detail .modal-header {
@@ -205,11 +205,12 @@
     padding-left: 10px;
     margin-top: 10px;
     margin-bottom: 50px;
+    height: 350px;
 }
 
 #search .modal-content {
     width: 100%;
-    margin-top: -120px;
+    margin-top: -60px;
 }
 
 #search .modal-header {
@@ -220,11 +221,12 @@
     padding-left: 10px;
     margin-top: 10px;
     margin-bottom: 50px;
+    height: 350px;
 }
 
 #cancel .modal-content {
     width: 100%;
-    margin-top: -120px;
+    margin-top: -60px;
 }
 
 #cancel .modal-header {
@@ -235,6 +237,7 @@
     padding-left: 10px;
     margin-top: 10px;
     margin-bottom: 50px;
+    height: 350px;
 }
 
 #cancel .c_btn {
