--- a/food-crossroads/src/css/member_editpwd.css
+++ b/food-crossroads/src/css/member_editpwd.css
@@ -8,9 +8,10 @@
   background-color: #403c3c;
   width: 230px;
   height: 100%;
-  position: fixed;
+  position: absolute;
   float: left;
-  z-index: 4;
+  left: 0;
+  position: fixed;
 }
 
 #mobile_member_aside {
@@ -22,7 +23,6 @@
 }
 
 #member_aside .panel-default {
-  /* border: 1px solid red; */
   border-bottom: 1px solid white;
   padding: 5px;
   width: 100%;
@@ -101,6 +101,88 @@
   background-color: #8d8c8c;
 }
 
-.table_container {
-  width: 100%;
+/* RWD start */
+
+/* 超大型螢幕 */
+
+@media screen and (max-width: 1200px) {
+  #member_aside {
+    display: none;
+  }
+  #aside_menu_chk:checked + #mobile_member_aside {
+    transform: translateX(0);
+  }
+  #aside_menu_chk:checked + #mobile_member_aside .fa-angle-right {
+    transform: scaleX(-1);
+  }
+  #mobile_member_aside {
+    display: unset;
+    background-color: #403c3c;
+    width: 230px;
+    height: 100vh;
+    position: absolute;
+    float: left;
+    left: 0;
+    position: fixed;
+    transform: translateX(-99%);
+    z-index: 2;
+    transition: 0.6s;
+  }
+  #mobile_member_aside label {
+    position: absolute;
+    background-color: #ccc;
+    border-radius: 0 5px 5px 0;
+    padding: 20px 10px;
+    top: 50%;
+    left: 100%;
+    transition: 0.6s;
+  }
+  #mobile_member_aside .default {
+    background-color: #8b1309;
+  }
+  #mobile_member_aside .panel-default:hover {
+    background-color: #8b1309;
+  }
+  #mobile_member_aside .panel-default {
+    border-bottom: 1px solid white;
+    padding: 5px;
+    width: 100%;
+  }
+  #mobile_member_aside .panel-title {
+    padding-top: 8px;
+  }
+  #mobile_member_aside .panel .panel-heading a {
+    font-weight: 600;
+    color: white;
+    text-decoration: none;
+    transition: 0.3s;
+    width: 100%;
+  }
 }
+
+/* 大型螢幕 */
+
+@media screen and (max-width: 992px) {
+
+}
+
+/* 平板 */
+
+@media screen and (max-width: 768px) {
+
+}
+
+/* 手機 */
+
+@media screen and (max-width: 576px) {
+
+}
+
+/* 小手機 */
+
+@media screen and (max-width: 480px) {
+
+}
+
+/* RWD end */
+
